--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "sql.js": "^1.10.2",
     "uuid": "^9.0.0",
+    "web-push": "^3.6.7",
     "ws": "^8.16.0"
   }
 }
