--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "sql.js": "^1.10.2",
     "uuid": "^9.0.0",
