fix(build): use npm ci for admin build and refactor notification UI to vertical layout

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "build": "npm install && cd client && npm install --include=dev && npm run build && cd ../admin && npm install --include=dev && npm run build && cd ../server && npm install",
+        "build": "npm install && cd client && npm install --include=dev && npm run build && cd ../admin && npm ci && npm run build && cd ../server && npm install",
         "start": "cd server && npm start"
     },
     "engines": {
