--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.4.1",
     "leaflet": "^1.9.4",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
