--- a/admin/package.json
+++ b/admin/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "chart.js": "^4.4.1",
+    "date-fns": "^4.1.0",
     "leaflet": "^1.9.4",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.0"
