--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "sql.js": "^1.10.2",
     "uuid": "^9.0.0",
     "ws": "^8.16.0"
